Get tests working with browserify modules

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "jasmine": "^2.3.2",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.9",
+    "karma-browserify": "^4.3.0",
     "karma-chrome-launcher": "^0.2.0",
+    "karma-commonjs": "0.0.13",
     "karma-jasmine": "^0.3.6"
   }
 }
