--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mock a function that doesn't exist yet, record calls made to it, and then pass those calls to the function when it finally arrives",
   "main": "premock.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
